[package]
name = "mini-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
crc = "3.0"

[lib]
name = "lib_miniredis"
path = "src/lib.rs"

[[bin]]
name = "miniredis_mem"
path = "src/miniredis_mem.rs"